load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "macaddr",
    srcs = ["macaddr.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/util/macaddr",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/sql/pgwire/pgcode",
        "//pkg/sql/pgwire/pgerror",
        "//pkg/sql/pgwire/encoding",
        "@com_github_cockroachdb_errors//:errors",
    ],
)
